--- a/style.css
+++ b/style.css
@@ -27,6 +27,7 @@ html {
 }
 
 .info-container p {
+	font-family: "KelsonSansBold";
 	color: rgba(255, 255, 255, 0.4);
     font-family: Arial;
     font-size: 60px;
